--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
   
           <ul class="menu">
             <li class="menu-item-p, list">
-              <a class="menu-link " href="./index.html">Студия</a>
+              <a class="menu-link " href="./index.html"> Студия</a>
             </li>
             <li class="menu-item, list">
-              <a class="menu-link current href="">Портфолио</a>
+              <a class="menu-link current" href=""> Портфолио</a>
             </li>
             <li class="menu-item, list">
-              <a class="menu-link href="">Контакты</a>
+              <a class="menu-link" href=" "> Контакты</a>
             </li>
           </ul>
         </nav>
@@ -35,11 +35,13 @@
         </ul>
       </header>
       <main>
+
  <!-- Filter -->
- <section class="section-hero">
+
+ <section class="section-filter">
     <h2 hidden class="">Filter</h2>
-    <ul class="">
-   <li class="filer-item"><button class="filter-btn current" type="button">Все</button></li> 
+    <ul class="filter-menu, list">
+   <li class="filer-item"><button class="main-btn" type="button">Все</button></li> 
    <li class="filer-item"> <button class="filter-btn" type="button">Веб-сайты</button></li>
    <li class="filer-item"><button class="filter-btn" type="button">Приложения</button></li>
     <li class="filer-item"><button class="filter-btn" type="button">Дизайн</button></li>
@@ -48,34 +50,34 @@
 
 </ul>
 
-<ul>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Технокряк</h3>
-    <p class="teammate-position">Веб-сайт</p></li>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Постер New Orlean vs Golden Star</h3>
-    <p class="teammate-position">Дизайн</p></li>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Ресторан Seafood</h3>
-    <p class="teammate-position">Приложение</p></li>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Проект Prime</h3>
-    <p class="teammate-position">Маркетинг</p></li>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Проект Boxes</h3>
-    <p class="teammate-position">Приложение</p></li>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Inspiration has no Borders</h3>
-    <p class="teammate-position">Веб-сайт</p></li>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Издание Limited Edition</h3>
-    <p class="teammate-position">Дизайн</p></li>
- <li class=""> <img src="" alt="">
-    <h3 class="teammate-name">Проект LAB</h3>
-    <p class="teammate-position">Маркетинг/p></li>
-        <li class=""> <img src="" alt="">
-            <h3 class="teammate-name">Growing Business</h3>
-            <p class="teammate-position">Приложение</p></li>
+<ul class="portfolio-project, list">
+ <li class="project"> <img src="Images/Portfolio/techno.jpeg" alt="открытый ноутбук с картинками">
+    <h3 class="project-name">Технокряк</h3>
+    <p class="project-item">Веб-сайт</p></li>
+ <li class=""> <img src="Images/Portfolio/posterneworleans.jpeg" alt="постер с баскетболистами">
+    <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+    <p class="project-item">Дизайн</p></li>
+ <li class=""> <img src="Images/Portfolio/restaurant.jpeg" alt="логотип ресторана с рыбой">
+    <h3 class="project-name">Ресторан Seafood</h3>
+    <p class="project-item">Приложение</p></li>
+ <li class=""> <img src="Images/Portfolio/projectprime.jpeg" alt="наушники">
+    <h3 class="project-name">Проект Prime</h3>
+    <p class="project-item">Маркетинг</p></li>
+ <li class=""> <img src="Images/Portfolio/projectbox.jpeg" alt="две коробки">
+    <h3 class="project-name">Проект Boxes</h3>
+    <p class="project-item">Приложение</p></li>
+ <li class=""> <img src="Images/Portfolio/insponoborders.jpeg" alt="монитор">
+    <h3 class="project-name">Inspiration has no Borders</h3>
+    <p class="project-item">Веб-сайт</p></li>
+ <li class=""> <img src="Images/Portfolio/limitededition.jpeg" alt="журнал">
+    <h3 class="project-name">Издание Limited Edition</h3>
+    <p class="project-item">Дизайн</p></li>
+ <li class=""> <img src="Images/Portfolio/projectlab.jpeg" alt="бирка">
+    <h3 class="project-name">Проект LAB</h3>
+    <p class="project-item">Маркетинг</p></li>
+        <li class=""> <img src="Images/Portfolio/growingbusiness.png" alt="человек печатает на ноутбуке">
+            <h3 class="project-name">Growing Business</h3>
+            <p class="project-item">Приложение</p></li>
 
 
 </ul>
@@ -84,7 +86,27 @@
 
       </main>
 
-
+  <!-- Footer -->
+  <footer class ="footer">
+   <a class="logo" href=""> Web <span class="logo-color-footer"> Studio</span> </a>
+   <address>
+     <ul class="contact-footer, list">
+       <li class="footer-item">
+         <a class=" map"
+           href="https://goo.gl/maps/65E6jA36ebbG1yaQ8"
+           target="_blank"
+           rel="noopener noreferrer"
+           >г. Киев, пр-т Леси Украинки, 26</a
+         >
+       </li>
+       <li class="footer-item, list">
+         <a class="mail-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+       </li>
+       <li class="footer-item, list">
+         <a  class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+       </li>
+     </ul>
+   </address>
   
 </body>
 </html>
