--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="modern-normalize" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel = "preconnect" href = "https://fonts.gstatic.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="modern-normalize"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- HEADER -->
     <header class="header">
       <nav class="navigation">
-        <a class="logo" href=""> Web <span class="logo-color"> Studio</span> </a>
+        <a class="logo" href="">
+          Web <span class="logo-color"> Studio</span>
+        </a>
 
         <ul class="menu">
           <li class="menu-item, list">
@@ -30,8 +41,14 @@
         </ul>
       </nav>
       <ul class="contact-section">
-        <li class="contact-mail, list"><a class="mail-link-current" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contact-tel, list"><a class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="contact-mail, list">
+          <a class="mail-link-current" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contact-tel, list">
+          <a class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
@@ -82,48 +99,53 @@
         <h2 class="what-we-do-title">Чем мы занимаемся</h2>
         <ul>
           <li class="What-we-do-itm, list">
-        <img class="wwd-img-1"
-          src="Images/WhatWeDo/box1.jpeg"
-          alt="человек печатает"
-          width="370"
-          height="295"
-        />
+            <img
+              class="wwd-img-1"
+              src="Images/WhatWeDo/box1.jpeg"
+              alt="человек печатает"
+              width="370"
+              height="295"
+            />
           </li>
-          <li class="What-we-do-itm, list ">
-        <img class="wwd-img-2"
-          src="Images/WhatWeDo/box2.jpeg"
-          alt="девушка держит телефон"
-          width="370"
-          height="295"
-        />
+          <li class="What-we-do-itm, list">
+            <img
+              class="wwd-img-2"
+              src="Images/WhatWeDo/box2.jpeg"
+              alt="девушка держит телефон"
+              width="370"
+              height="295"
+            />
           </li>
-        <li class="What-we-do-itm, list">
-        <img class="wwd-img-3"
-          src="Images/WhatWeDo/box3.jpeg"
-          alt="цветовая палитра на планшете"
-          width="370"
-          height="295"
-        />
-      </li>
-      </ul>
+          <li class="What-we-do-itm, list">
+            <img
+              class="wwd-img-3"
+              src="Images/WhatWeDo/box3.jpeg"
+              alt="цветовая палитра на планшете"
+              width="370"
+              height="295"
+            />
+          </li>
+        </ul>
       </section>
 
       <!-- Our Team-->
       <section class="our-team">
         <h2 class="our-team-title">Наша команда</h2>
         <ul class="our-team-menu">
-          <li class=" our-team-item, list ">
-            <img class="img-team"
+          <li class="our-team-item, list">
+            <img
+              class="img-team"
               src="Images/Team/ИгорьДемьяненко.jpeg"
               alt="Игорь Демьяненко-Product Designer>"
               width="270"
               height="260"
             />
-            <h3 class=" teammate-name">Игорь Демьяненко</h3>
+            <h3 class="teammate-name">Игорь Демьяненко</h3>
             <p class="teammate-position">Product Designer</p>
           </li>
-          <li class=" our-team-item, list">
-            <img class="img-team, list"
+          <li class="our-team-item, list">
+            <img
+              class="img-team, list"
               src="Images/Team/ОльгаРепина.jpeg"
               alt="Ольга Репина-Frontend Developer"
               width="270"
@@ -132,8 +154,9 @@
             <h3 class="teammate-name">Ольга Репина</h3>
             <p class="teammate-position">Frontend Developer</p>
           </li>
-          <li class=" our-team-item, list">
-            <img class="img-team"
+          <li class="our-team-item, list">
+            <img
+              class="img-team"
               src="Images/Team/НиколайТарасов.jpeg"
               alt=""
               width="270"
@@ -142,8 +165,9 @@
             <h3 class="teammate-name">Николай Тарасов</h3>
             <p class="teammate-position">Marketing</p>
           </li>
-          <li class=" our-team-item, list">
-            <img class="img-team"
+          <li class="our-team-item, list">
+            <img
+              class="img-team"
               src="Images/Team/МихаилЕрмаков.jpeg"
               alt="Михаил Ермаков-UI Designer"
               width="270"
@@ -156,12 +180,15 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a class="logo-footer" href=""> Web <span class="logo-color"> Studio</span> </a>
+    <footer class="footer">
+      <a class="logo-footer" href="">
+        Web <span class="logo-color-footer"> Studio</span>
+      </a>
       <address>
         <ul class="contact-footer, list">
           <li class="footer-item">
-            <a class=" map"
+            <a
+              class="map"
               href="https://goo.gl/maps/65E6jA36ebbG1yaQ8"
               target="_blank"
               rel="noopener noreferrer"
@@ -169,10 +196,12 @@
             >
           </li>
           <li class="footer-item, list">
-            <a class="mail-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mail-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="footer-item, list">
-            <a  class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
