--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             >
           </li>
           <li class="footer-item, list">
-            <a class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="tel-link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
