--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
          <a class="mail-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
        </li>
        <li class="footer-item, list">
-         <a  class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+         <a  class="tel-link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
        </li>
      </ul>
    </address>
