--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <img
               class="img-team"
               src="Images/Team/НиколайТарасов.jpeg"
-              alt=""
+              alt="НиколайТарасов-Frontend Developer"
               width="270"
               height="260"
             />
