--- a/portfolio.html
+++ b/portfolio.html
@@ -51,31 +51,54 @@
 </ul>
 
 <ul class="portfolio-project, list">
- <li class="project"> <img src="Images/Portfolio/techno.jpeg" alt="открытый ноутбук с картинками">
+ <li class="project"> <img src="Images/Portfolio/techno.jpeg" alt="открытый ноутбук с картинками"
+  width="370px"
+  height="294px">
+  
     <h3 class="project-name">Технокряк</h3>
     <p class="project-item">Веб-сайт</p></li>
- <li class=""> <img src="Images/Portfolio/posterneworleans.jpeg" alt="постер с баскетболистами">
+ <li class=""> <img src="Images/Portfolio/posterneworleans.jpeg" alt="постер с баскетболистами"
+  width="370px"
+  height="294px">
     <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
     <p class="project-item">Дизайн</p></li>
- <li class=""> <img src="Images/Portfolio/restaurant.jpeg" alt="логотип ресторана с рыбой">
+ <li class=""> <img src="Images/Portfolio/restaurant.jpeg" alt="логотип ресторана с рыбой"
+  width="370px"
+  height="294px">
     <h3 class="project-name">Ресторан Seafood</h3>
     <p class="project-item">Приложение</p></li>
- <li class=""> <img src="Images/Portfolio/projectprime.jpeg" alt="наушники">
+ <li class=""> <img src="Images/Portfolio/projectprime.jpeg" alt="наушники"
+  width="370px"
+  height="294px">
     <h3 class="project-name">Проект Prime</h3>
     <p class="project-item">Маркетинг</p></li>
- <li class=""> <img src="Images/Portfolio/projectbox.jpeg" alt="две коробки">
+ <li class=""> <img src="Images/Portfolio/projectbox.jpeg" alt="две коробки"
+  width="370px"
+  height="294px"
+  >
     <h3 class="project-name">Проект Boxes</h3>
     <p class="project-item">Приложение</p></li>
- <li class=""> <img src="Images/Portfolio/insponoborders.jpeg" alt="монитор">
+ <li class=""> <img src="Images/Portfolio/insponoborders.jpeg" alt="монитор"
+  width="370px"
+  height="294px">
     <h3 class="project-name">Inspiration has no Borders</h3>
     <p class="project-item">Веб-сайт</p></li>
- <li class=""> <img src="Images/Portfolio/limitededition.jpeg" alt="журнал">
+ <li class=""> <img src="Images/Portfolio/limitededition.jpeg" alt="журнал"
+  width="370px"
+  height="294px"
+  >
     <h3 class="project-name">Издание Limited Edition</h3>
     <p class="project-item">Дизайн</p></li>
- <li class=""> <img src="Images/Portfolio/projectlab.jpeg" alt="бирка">
+ <li class=""> <img src="Images/Portfolio/projectlab.jpeg" alt="бирка"
+  width="370px"
+  height="294px"
+  >
     <h3 class="project-name">Проект LAB</h3>
     <p class="project-item">Маркетинг</p></li>
-        <li class=""> <img src="Images/Portfolio/growingbusiness.png" alt="человек печатает на ноутбуке">
+        <li class=""> <img src="Images/Portfolio/growingbusiness.png" alt="человек печатает на ноутбуке"
+          width="370px"
+  height="294px">
+          >
             <h3 class="project-name">Growing Business</h3>
             <p class="project-item">Приложение</p></li>
 
