--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="body">
     <!-- HEADER -->
     <header class="header">
       <nav class="navigation">
